--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ name: CD Deify-web dev
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     types: [closed]
     
 #  push:
