--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,10 +5,9 @@ on:
   pull_request:
     branches: [ main ]
     types: [closed]
-    
-#  push:
-#    branches: [ develop ]
-  
+
+concurrency: testing
+
 jobs:
 
   build:
